--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://teolingo-back-production.up.railway.app/api/
+VITE_API_BASE_URL=VITE_API_BASE_URL=https://teolingo-back-production.up.railway.app
